Store the scheme as data on the live node znode instead of changing the node name